# SoftAssignment

./: CMakeLists.txt  Readme.md
playingWithNumbers/: armstrong.cpp  countDigits.cpp  digitSum.cpp  firstLastSum.cpp  frequencyCheck.cpp  palindrome.cpp  perfectNum.cpp  productEvenDigits.cpp  reverse.cpp  strongNum.cpp  swap.cpp
printingPatterns/: a.cpp  b.cpp
