cmake_minimum_required(VERSION 3.26)
project(SoftAssignment)

set(CMAKE_CXX_STANDARD 17)

add_executable(SoftAssignment
#        printingPatterns/a.cpp
#        printingPatterns/b.cpp
        printingPatterns/c.cpp
        #        playingWithNumbers/swap.cpp
#        playingWithNumbers/palindrome.cpp
#        playingWithNumbers/frequencyCheck.cpp
#        playingWithNumbers/armstrong.cpp
#        playingWithNumbers/strongNum.cpp
#        playingWithNumbers/perfectNum.cpp
        #        playingWithNumbers/productEvenDigits.cpp
#        playingWithNumbers/firstLastSum.cpp
        #[[ playingWithNumbers/reverse.cpp]]
#        playingWithNumbers/countDigits.cpp
#        playingWithNumbers/digitSum.cpp
)
